# Armlatable

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  requirements.txt
circuit/armlatable_v1/: .gitignore  armlatable_v1.kicad_pcb  armlatable_v1.kicad_pro  armlatable_v1.kicad_sch  custom.kicad_sym
docs/: architecture.md  coding_rule.md
firmware/dongle_esp/: dongle_esp.ino
firmware/pico_motor_driver/: pico_motor_driver.ino
firmware/r4_motor_driver/: r4_motor_driver.ino
firmware/robot_r4_wifi/: robot_r4_wifi.ino
firmware/test/direct_drive_test/: direct_drive_test.ino  monitor_log.py  test_motor.py
firmware/test/dxl_hello/: dxl_hello.ino
firmware/test/dxl_ref_test/: dxl_ref_test.ino
firmware/test/wifi_comm_test/: wifi_comm_test.ino
host/: CMakeLists.txt
host/apps/: main.cpp  viewer.cpp
host/include/algorithm/: algorithm_base.hpp  algorithm_teleop.hpp
host/include/serial/: serial_port.hpp
host/src/algorithm/: algorithm_teleop.cpp
module/: library.properties
module/src/configuration/: configuration.h
module/src/protocol/: protocol.cpp  protocol.h
outdated/proto_pico/src/: config.yaml  main.py
proto_pico/: Makefile  README.md
proto_pico/src/hardware/: dxl_interface.py
proto_r4_wifi/: Makefile  README.md  config.yaml
proto_r4_wifi/docs/: architecture.md  coding_rules.md
proto_r4_wifi/firmware/esp_dongle/: esp_dongle.ino
proto_r4_wifi/firmware/r4_motor_driver/: r4_motor_driver.ino
proto_r4_wifi/src/: main.py
proto_r4_wifi/src/api/: keyboard.py  test.py
proto_r4_wifi/src/hardware/: r4_interface.py
scripts/: generate_config_header.py  setup_ports.py
src/: config.yaml  main.py
src/api/: keyboard.py  test.py
src/hardware/: dc_motor_interface.py  dxl_interface.py  pico_interface.py
